[package]
name = "ttynamed"
version = "1.0.0"
authors = ["Ian Rees <ian.rees@gmail.com>"]
edition = "2018"
license = "GPL-3.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
directories = "2.0.2"
glob = "0.3.0"
lazy_static = "1.4.0"
regex = "1.3.1"
serde = { version = "1.0.101", features = ["derive"] }
termcolor = "1.0.5"
toml = "0.5.3"
