[package]
name = "ttynamed"
description = "Tool for managing USB serial devices"
version = "2.2.0"
authors = ["Ian Rees <code@ianrees.nz>"]
edition = "2018"
license = "GPL-3.0-only"
readme = "README.md"

[dependencies]
clap = "2.34.0"
directories = "2.0.2"
glob = "0.3.0"
lazy_static = "1.4.0"
regex = "1.3.1"
serde = { version = "1.0.101", features = ["derive"] }
termcolor = "1.0.5"
toml = "0.5.3"
